--- a/main.html
+++ b/main.html
@@ -11,7 +11,11 @@
         <h1>NOME</h1>
     </header>
     <section id="div1">
-        <h1>teste</h1>
+        <div id="respostas">
+            <div id="perguntas"></div>
+            <input type="button" id="sim" value="Sim" onmouseenter="Mudar_cor_entrou_sim()" onmouseleave="Mudar_cor_saiu_sim()" onclick="Avancar()">
+            <input type="button" id="nao" value="Não" onmouseenter="Mudar_cor_entrou_nao()" onmouseleave="Mudar_cor_saiu_nao()" onclick="Avancar()">
+        </div>
     </section>
     <section id="div2">
         <h1>Branca</h1>
