Teste tdah feito

--- a/main.html
+++ b/main.html
@@ -11,10 +11,14 @@
         <h1>NOME</h1>
     </header>
     <section id="div1">
-        <div id="respostas">
-            <div id="perguntas"></div>
-            <input type="button" id="sim" value="Sim" onmouseenter="Mudar_cor_entrou_sim()" onmouseleave="Mudar_cor_saiu_sim()" onclick="Avancar()">
-            <input type="button" id="nao" value="Não" onmouseenter="Mudar_cor_entrou_nao()" onmouseleave="Mudar_cor_saiu_nao()" onclick="Avancar()">
+        <div id="TDAH">
+            <div id="questionario">
+                <h2>Teste TDAH</h2>
+                <input type="button" id="comecar" value="Começar" onclick="Comecar_TDAH()" onmouseenter="Mudar_cor_entrou_comecar()" onmouseleave="Mudar_cor_saiu_comecar()">
+            </div>
+            <div id="resposta">
+    
+            </div>
         </div>
     </section>
     <section id="div2">
