feito teste TDAH e fundo

--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>NOME</h1>
+        <img src="Anielly Costa_horizontal4x.png" alt="Logo_Psicologa" id="Logo">
     </header>
     <section id="div1">
         <div id="TDAH">
             <div id="questionario">
-                <h2>Teste TDAH</h2>
+                <h2>Avaliação TDAH</h2>
                 <input type="button" id="comecar" value="Começar" onclick="Comecar_TDAH()" onmouseenter="Mudar_cor_entrou_comecar()" onmouseleave="Mudar_cor_saiu_comecar()">
             </div>
             <div id="resposta">
@@ -38,6 +38,7 @@
     </section>
     <footer id="pes">
         <h1>teste</h1>
+        
     </footer>
 
     <script src="script.js"></script>
