fazendo teste autismo

--- a/main.html
+++ b/main.html
@@ -22,10 +22,33 @@
         </div>
     </section>
     <section id="div2">
-        <h1>Branca</h1>
+        <div id="dass21">
+            <div id="perguntas_DASS21">
+                <h2>Avaliação Depressão, ansiedade e estresse</h2>
+                <input type="button" id="comecar_DASS21" value="Começar" onmouseenter="Mudar_cor_entrou_comecar_DASS21()" onmouseleave="Mudar_cor_saiu_comecar_DASS21()" onclick="Instrucoes_DASS21()">
+            </div>
+            <div id="respostas_DASS21">
+                
+            </div>
+        
+        </div>
+
+
     </section>
     <section id="div3">
-        <h1>teste</h1>
+        <div id="teste_autismo">
+            <div id="teste_autismo_perguntas">
+
+            </div>
+
+            <div id="teste_autismo_respostas">
+
+
+            </div>
+
+        </div>
+
+
     </section>
     <section id="div4">
         <h1>teste</h1>
