--- a/main.html
+++ b/main.html
@@ -38,7 +38,8 @@
     <section id="div3">
         <div id="teste_autismo">
             <div id="teste_autismo_perguntas">
-
+                <h2>Avaliação de Autismo</h2>
+                <input type="button" id="botao_autismo_comecar" class="autismo_botao" value="Começar" onclick="Instrucoes_autismo()" onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()">
             </div>
 
             <div id="teste_autismo_respostas">
@@ -51,7 +52,21 @@
 
     </section>
     <section id="div4">
-        <h1>teste</h1>
+        
+        <div id="altas_habilidades">
+            <div id="perguntas_altas_habilidades">
+                <h2>Possíveis indicadores <br> de Altas Habilidades</h2>
+                <input type="button" class="autismo_botao" value="Começar" id="comecar_altas_habilidades" onmouseenter="Mudar_cor_botao_geral_entrou()" onmouseleave="Mudar_cor_botao_geral_saiu()" onclick="Comecar_altas_habilidades()">
+            </div>
+
+            <div id="respostas_altas_habilidades">
+
+            </div>
+
+        </div>
+
+
+
     </section>
     <section id="div5">
         <h1>teste</h1>
